# jenkins-mcp-server

./: LICENSE  README.md  jenkins.py  mcp_client.py  pyproject.toml  server_config.json
