[project]
name = "custom-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "jenkinsapi>=0.3.15",
    "langchain-openai>=0.3.32",
    "mcp-use>=1.3.10",
    "mcp[cli]>=1.13.1",
    "uvicorn>=0.35.0",
]
